src/objects/zkmulti__Shipmate_Preference_Info__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__AccountIsSetupForSmartPostOutbound__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account is Setup for SmartPost Outbound</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__AccountIsSetupForSmartPostReturns__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account is Setup for SmartPost Returns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Allow_Record_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Record Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__BillingType__c</fullName>
        <label>Billing Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CarrierAccount_APIID__c</fullName>
        <label>Carrier Account API ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CarrierAccount_APIKey__c</fullName>
        <description>Australia Post API Key</description>
        <label>Carrier Account API Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CarrierAccount_APISecretEncrypted__c</fullName>
        <label>Carrier Account API Secret</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>zkmulti__CarrierAccount_APISecret__c</fullName>
        <description>Australia Post Secret Key</description>
        <label>Carrier Account API Secret</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CarrierAccount_Collection_Location__c</fullName>
        <label>Carrier Account Collection Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CarrierAccount_ContactID__c</fullName>
        <label>Carrier Account Contact ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CarrierAccount_ContractID__c</fullName>
        <label>Carrier Account Contract ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CarrierAccount_CustomerNumber__c</fullName>
        <label>Carrier Account Customer Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CarrierAccount_DepartmentID__c</fullName>
        <label>Carrier Account Department ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CarrierAccount_GlobalPack__c</fullName>
        <label>Carrier Account Global Pack</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CarrierAccount_HasCreditCard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Carrier Account Has Credit Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__CarrierAccount_PrintAsYouGo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Australia Post Print as you go</description>
        <label>Carrier Account Print As You Go</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__CarrierAccount_UniBoxIP__c</fullName>
        <label>CarrierAccount Uni-Box IP</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__CarrierAccount_UniBoxPort__c</fullName>
        <label>Carrier Account Uni-Box Port</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier_Account_Client_Id__c</fullName>
        <label>Carrier Account Client Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier_Account_Company_Name__c</fullName>
        <label>Carrier Account Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier_Account_Country__c</fullName>
        <label>Carrier Account Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier_Account_Entity__c</fullName>
        <label>Carrier Account Entity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier_Account_Facility_Code__c</fullName>
        <label>Carrier Account Facility Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier_Account_IPA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Carrier Account IPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier_Account_ISAL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Asendia Account ISAL</description>
        <inlineHelpText>Asendia Account ISAL</inlineHelpText>
        <label>Carrier Account ISAL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier_Account_International_Express__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Asendia Account International Express</description>
        <inlineHelpText>Asendia Account International Express</inlineHelpText>
        <label>Carrier Account International Express</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier_Account_Is_Reseller__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Carrier Account Is Reseller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier_Account_Mailer_ID__c</fullName>
        <description>DHL Global Mail Mailer ID</description>
        <inlineHelpText>DHL Global Mail Mailer ID</inlineHelpText>
        <label>Carrier Account Mailer ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier_Account_Number__c</fullName>
        <label>Carrier Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier_Account_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Asendia Account Other</description>
        <inlineHelpText>Asendia Account Other</inlineHelpText>
        <label>Carrier Account Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier_Account_PMEI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Asendia Account PMEI</description>
        <inlineHelpText>Asendia Account PMEI</inlineHelpText>
        <label>Carrier Account PMEI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier_Account_PMI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Carrier Account PMI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier_Account_Password__c</fullName>
        <label>Carrier Account Password</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier_Account_Pin__c</fullName>
        <label>Carrier Account Pin</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier_Account_Priority_Tracked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Carrier Account Priority Tracked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier_Account_Return_Location_ID__c</fullName>
        <description>DHL Global Mail Return Location ID</description>
        <inlineHelpText>DHL Global Mail Return Location ID</inlineHelpText>
        <label>Carrier Account Return Location ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier_Account_Username__c</fullName>
        <label>Carrier Account Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier_Account_VATNumber__c</fullName>
        <label>Carrier Account VAT Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier_Account_ePacket__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Asendia USA ePacket</description>
        <inlineHelpText>Asendia USA ePacket</inlineHelpText>
        <label>Carrier Account ePacket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier_Test_Account_API_Key__c</fullName>
        <label>Carrier Test Account API Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier_Test_Account_Customer_Number__c</fullName>
        <label>Carrier Test Account Customer Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier_Test_Account_DepartmentID__c</fullName>
        <label>Carrier Test Account Department ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier_Test_Account_Facility_Code__c</fullName>
        <label>Carrier Test Account Facility Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier_Test_Account_Number__c</fullName>
        <label>Carrier Test Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier_Test_Account_Password__c</fullName>
        <label>Carrier Test Account Password</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier_Test_Account_Username__c</fullName>
        <label>Carrier Test Account Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Convert_4x6_GIF_to_PDF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Convert 4x6 GIF to PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Create_Labels__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Labels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Custom_Meta__c</fullName>
        <label>Custom Meta</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__DefaultImageResolution__c</fullName>
        <description>Used only for ZPLII and EPL labels. Default value is 203 dpi</description>
        <inlineHelpText>Used only for ZPLII and EPL labels. Default value is 203 dpi</inlineHelpText>
        <label>Default Image Resolution</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Default_Image_Rotation__c</fullName>
        <label>Default Image Rotation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__DropoffTypeDefault__c</fullName>
        <label>Dropoff Type Default</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__FTP_Location__c</fullName>
        <description>FTP Location syntax is ftp://host[:port]</description>
        <inlineHelpText>FTP Location syntax is ftp://host[:port]</inlineHelpText>
        <label>FTP Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__FTP_Password__c</fullName>
        <label>FTP Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__FTP_Username__c</fullName>
        <label>FTP Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__FedExSmartPostHubId__c</fullName>
        <label>FedEx SmartPost Hub ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Have_DBR_Contract_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have DBR Contract Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__HideNegotiatedRates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Negotiated Rates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__IncludeImageResolution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows to include Image Resolution drop-down to Wizard page</description>
        <inlineHelpText>Allows to include Image Resolution drop-down to Wizard page</inlineHelpText>
        <label>Include Image Resolution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__IncludeMailInnovations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Mail Innovations Packaging Types</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__IncludeSurePost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Sure Post Service Types</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Individual_Package_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Individual Package Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__LastBoughtPostageAmount__c</fullName>
        <label>Last Bought Postage Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkmulti__LastBoughtPostageTime__c</fullName>
        <label>Last Bought Postage Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zkmulti__MWSAuthToken__c</fullName>
        <label>MWS Auth Token</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__MarketplaceId__c</fullName>
        <label>Marketplace Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Mod_Key__c</fullName>
        <label>Mod Key</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Report_Id__c</fullName>
        <label>Report Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Schedul_Job_Id__c</fullName>
        <label>Schedul Job Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Schedule_Cron__c</fullName>
        <label>Schedule Cron</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Schedule_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schedule Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__SecurityAnswerEncrypt__c</fullName>
        <label>Security Answer</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>zkmulti__SecurityQuestion__c</fullName>
        <label>Security Question</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SellerId__c</fullName>
        <label>Seller Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Supports_Inbound__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supports Inbound</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__WebPasswordEncrypted__c</fullName>
        <label>Web Password</label>
        <length>17</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>Shipping Preference Info</label>
    <nameField>
        <displayFormat>PI-{0000}</displayFormat>
        <label>Shipping Preference Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipping Preference Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>